--- a/templates/haml/app/views/layouts/application.html.haml
+++ b/templates/haml/app/views/layouts/application.html.haml
@@ -1,9 +1,18 @@
 !!! 5
 %html
-%head
-  = csrf_meta_tag
-  /[if lt IE 9]
-    = javascript_include_tag 'html5'
-%body
-  = yield
-  = javascript_include_tag :defaults
+  %head
+    %title= yield(:title) || app_name.humanize
+
+    = csrf_meta_tag
+
+    = stylesheet_link_tag :all
+
+    /[if lt IE 9]
+      = javascript_include_tag 'html5'
+
+  %body
+    = render :partial => 'shared/flash', :locals => { :flash => flash }
+
+    = yield
+
+    = javascript_include_tag :defaults
